# MBohr

./: .gitignore  README.md  pyproject.toml
src/MBohr/: __init__.py  core.py
