[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MBohr"
version = "0.1.0"
description = "MBohr: Librería en Python para cálculos y visualización del modelo atómico de Bohr."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name = "Daniel Felipe Ramirez", email = "dfrc5528@gmail.com" }
  {name = "Santiago Criollo Bermudez", email: "santicriollo@hotmail.com"}
  {name = "Alexei Duran", email="amidamarulas@gmail.com"}
]

keywords = ["physics", "bohr", "quantum", "atomic-model", "education"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "numpy>=1.20",
  "matplotlib>=3.5"
]

[project.urls]
Homepage = "https://github.com/amidamarulas/MBohr.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["MBohr*"]
